fix: add id to "add" item

--- a/app/src/main/res/menu/navigation_bar_menu.xml
+++ b/app/src/main/res/menu/navigation_bar_menu.xml
@@ -5,7 +5,7 @@
     android:title="@string/home"
     android:icon="@drawable/ic_home_button_foreground"/>
     <item
-        android:id="add"
+        android:id="@+id/add"
         android:title="@string/add_new"
         android:icon="@drawable/ic_add_button_foreground"/>
     <item
